@@ -220,6 +220,14 @@
 								</config>
 						</TCEforms>
 					</linkNamesToSingleView>
+					<doNotLinkToDetailView>
+						<TCEforms>
+							<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.doNotLinkToDetailView</label>
+							<config>
+								<type>check</type>
+							</config>
+						</TCEforms>
+					</doNotLinkToDetailView>
 					<showSingleViewAsPopUp>
 						<TCEforms>
 								<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.showSingleViewAsPopUp</label>
